# SDL2-ping-pong

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
src/: Dot.cpp  Dot.h  MenuItem.h  Plank.cpp  Plank.h  Profile.cpp  Profile.h  Texture.h  backButton.cpp  backButton.h  collision.cpp  collision.h  globals.cpp  globals.h  login.cpp  login.h  main.cpp  utils.cpp  utils.h
src/choiceBackground/: choiceBackground.cpp  choiceBackground.h
src/game/: Dot.cpp  Dot.h  Plank.cpp  Plank.h  Texture.cpp  Texture.h  collision.cpp  game.cpp  game.h
src/records/: records.cpp  records.h
src/rules/: rules.cpp  rules.h
